--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
   <title>Sample Bootstrap</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
 </head>
 
 <body>
+  <!-- navbar -->
+  <nav>
+    <div class="container">
+      <ul class="nav justify-content-end nav-pills flex-column flex-sm-row">
 
+        <li class="nav-item"><a class="nav-link active" href="#portfolio">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+
+      </ul>
+    </div>
+  </nav>
+  <!-- navbar ends -->
+  <header>
+    <div class="container">
+
+    </div>
+  </header>
 
 
 
