add header and profile picture

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <ul class="nav justify-content-end nav-pills flex-column flex-sm-row">
 
-        <li class="nav-item"><a class="nav-link active" href="#portfolio">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
 
@@ -25,7 +25,10 @@
   <!-- navbar ends -->
   <header>
     <div class="container">
-
+      <div class="centr">
+        <img src="assets/portfolio-pic.jpg" class="img-thumbnail mx-auto d-block" alt="Responsive image">
+        <h3>Enthusiastic web developer</h3>
+      </div>
     </div>
   </header>
 
