add portfolio section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </div>
   </nav>
   <!-- navbar ends -->
+
+  <!-- header -->
   <header>
     <div class="container">
       <div class="centr">
@@ -31,6 +33,43 @@
       </div>
     </div>
   </header>
+  <!-- header ends -->
+
+  <!-- portfolio -->
+
+  <div class="portfolio" id="portfolio">
+    <div class="container">
+      <h2>PORTFOLIO</h2>
+      <div class="card-deck">
+        <div class="card">
+          <h4>kalisoft</h4>
+          <a href="#">github</a>
+          <a href="#">Deploid site</a>
+          <p>Lorem ipsum dolor sit amet, qui eu liberavisse suscipiantur. Aeterno insolens ut mei, has iudico</p>
+
+        </div>
+        <div class="card">
+          <h4>kalisoft</h4>
+          <a href="#">github</a>
+          <a href="#">Deploid site</a>
+          <p>Lorem ipsum dolor sit amet, qui eu liberavisse suscipiantur. Aeterno insolens ut mei, has iudico</p>
+        </div>
+        <div class="card">
+          <h4>kalisoft</h4>
+          <a href="#">github</a>
+          <a href="#">Deploid site</a>
+          <p>Lorem ipsum dolor sit amet, qui eu liberavisse suscipiantur. Aeterno insolens ut mei, has iudico</p>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- portfolio ends -->
+
+
+
+
 
 
 
