add about section

--- a/index.html
+++ b/index.html
@@ -43,21 +43,23 @@
       <div class="card-deck">
         <div class="card">
           <h4>kalisoft</h4>
-          <a href="#">github</a>
-          <a href="#">Deploid site</a>
+          <a class="a" href="#">github</a>
+          <a class="a" href="#">Deploid site</a>
           <p>Lorem ipsum dolor sit amet, qui eu liberavisse suscipiantur. Aeterno insolens ut mei, has iudico</p>
 
         </div>
         <div class="card">
           <h4>kalisoft</h4>
-          <a href="#">github</a>
-          <a href="#">Deploid site</a>
+          <a class="a" href="#">github</a>
+          <a class="a" href="#">Deploid site</a>
+          <p>Lorem ipsum dolor sit amet, qui eu liberavisse suscipiantur. Aeterno insolens ut mei, has iudico</p>
+
           <p>Lorem ipsum dolor sit amet, qui eu liberavisse suscipiantur. Aeterno insolens ut mei, has iudico</p>
         </div>
         <div class="card">
           <h4>kalisoft</h4>
-          <a href="#">github</a>
-          <a href="#">Deploid site</a>
+          <a class="a" href="#">github</a>
+          <a class="a" href="#">Deploid site</a>
           <p>Lorem ipsum dolor sit amet, qui eu liberavisse suscipiantur. Aeterno insolens ut mei, has iudico</p>
 
         </div>
@@ -67,7 +69,19 @@
 
   <!-- portfolio ends -->
 
+  <!-- about -->
 
+  <div id="about">
+    <div class="container">
+      <h2 class="clr">ABOUT</h2>
+      <div class="row">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do veniam, quis nostrud exercitation ullamco ls aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- about ends -->
 
 
 
